# KOVIX

./: .env.example  .eslint-ignore  .gitignore  BLOCKERS.md  BRAND_ANALYSIS.md  BUILD.md  CHANGELOG.md  COMPETITOR_ANALYSIS.md  CONSTRUCT_LICENSE.txt  CONTRIBUTING.md  Dockerfile  E2E_FILE_CREATION_TEST.md  E2E_IDE_VERIFICATION.md  E2E_REAL_LLM_VERIFIED.md  E2E_VERIFICATION.md  GROUND_TRUTH.md  HANDOVER.md  INSTALL.md  INSTALLER_TEST.md  LAUNCH_CHECKLIST.md  LEGAL_AUDIT.md  LICENSE.txt  MARKET_RESEARCH.md  PACKAGING.md  PRIVACY.md  README.md  RELEASE_INSTRUCTIONS.md  REPO_AUDIT.md  SECURITY.md  SECURITY_AUDIT.md  TEST_RESULTS.md  VERIFICATION_REPORT.md  docker-compose.yml  eslint.config.js  index.html  jest.construct.cjs  netlify.toml  package-lock.json  package.json  product.json  (+9 more)
.github/: codeql-config.yml  dependabot.yml
agent-backend/: app.py  build_sidecar.py  requirements-lock.txt  requirements-test.txt  requirements.txt
branding/: README.md
cli/: Cargo.toml
construct-user-data/: Network Persistent State  Preferences
docs/: architecture.md  index.html  plan-act-flow.md
docs/css/: style.css
download/: TAURI_SIGNING_KEYS.md
extensions/: package-lock.json  package.json
remote/: package-lock.json  package.json
scripts/: bundle-backend.sh  construct.sh  sync-vscode.sh
shared-types/: api.ts
src/: tsconfig.mcp.json
src/main/: Cargo.toml  tauri.conf.json
src/main/capabilities/: default.json
src/main/src/: lib.rs  main.rs  menu.rs  state.rs  terminal.rs  tray.rs
src/main/src/commands/: agent.rs  autonomous.rs  mod.rs
vscode-fork/: product.json
(+568 files in other folders)
